# LittleArgsParser

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Src/: CMakeLists.txt
Src/LittleArgsParser/: CMakeLists.txt  LAPHelper.cpp  LAPHelper.hpp  LAPParser.cpp  LAPParser.hpp  LAPTypes.cpp  LAPTypes.hpp  LittleArgsParser.hpp  Log.hpp
Tests/: CMakeLists.txt  test_basic.cpp  test_short.cpp
libLittleArgsParser/: CMakeLists.txt
libLittleArgsParser/Include/LittleArgsParser/: LAPHelper.hpp  LAPTypes.hpp  LittleArgsParser
libLittleArgsParser/Src/: LAPHelper.cpp  LAPParser.cpp  LAPParser.hpp  LAPTypes.cpp  LittleArgsParser.cpp  Log.hpp
libLittleArgsParser/Tests/: CMakeLists.txt  test_short.cpp
libLittleArgsParser/cmake/: LittleArgsParserConfig.cmake.in
usageExample/: CMakeLists.txt
usageExample/Src/: main.cpp
